--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 ---
-layout: category
-permalink: /admin/
-category: admin
+layout: default
+permalink: /about/
+category: about
 title: 普通管理员
 ---
 <h2 align="center">{{ page.title }}</h2>
