--- a/pages/about.html
+++ b/pages/about.html
@@ -2,36 +2,10 @@
 layout: default
 permalink: /about/
 category: about
-title: 普通管理员
+title: 关于我
 ---
 <h2 align="center">{{ page.title }}</h2>
-<div class="table-responsive">
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>管理员名称</th>
-      <th>操作</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class="info">
-      <td>普通管理员1号</td>
-      <td>
-        <button class="btn btn-warning" style="margin-bottom:6px">重置密码</button>
-      </td>
-    </tr>
-    <tr class="info">
-      <td>普通管理员2号</td>
-      <td>
-        <button class="btn btn-warning" style="margin-bottom:6px">重置密码</button>
-      </td>
-    </tr>
-    <tr class="info">
-      <td>普通管理员3号</td>
-      <td>
-        <button class="btn btn-warning" style="margin-bottom:6px">重置密码</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
-</div>
+<h2 align="center">地址：顺德区容桂百昌商业城</h2>
+<h2 align="center">电话：<a href="tel:13790019668">13790019668</a></h2>
+<p align="center"><a href="http://j.map.baidu.com/aAXN9" target="_blank"><img src="/images/zt-gps.jpg"></a></p>
+<p align="center"><a href="http://j.map.baidu.com/aAXN9" class="btn btn-success" target="_blank">点击地图进入详细动态地图和GPS导航系统</a></p>
