--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,11 @@ category: about
 title: 关于我
 ---
 <h2 align="center">{{ page.title }}</h2>
-<h2 align="center">地址：顺德区容桂百昌商业城</h2>
-<h2 align="center">电话：<a href="tel:13790019668">13790019668</a></h2>
-<p align="center"><a href="http://j.map.baidu.com/aAXN9" target="_blank"><img src="/images/zt-gps.jpg"></a></p>
-<p align="center"><a href="http://j.map.baidu.com/aAXN9" class="btn btn-success" target="_blank">点击地图进入详细动态地图和GPS导航系统</a></p>
+<p align="center"><img src="/images/about/about.jpg"></p>
+<div class="col-md-12" style="text-indent:2em">
+  <p>个人简介</p>
+  <p>个人简介</p>
+  <p>个人简介</p>
+  <p>个人简介</p>
+  <p>个人简介</p>
+</div>
